# kosp_window

./: .clang-format  .gitignore  .gitmodules  BuildPlugin  LICENSE  README.md  THIRD_PARTY_LICENSES.md  TailLog
lib/cjson/: CMakeLists.txt
res/config/: changelog.json  userconfig.json
scripts/: MovePluginToFolder  Utils
src/: CMakeLists.txt  XCompile.cmake  cmake_install.cmake  main.c
src/FsAccess/ComplexDataStructs/Datarefs/DataStructDefs/: Datarefs_Struct.h
src/FsAccess/ComplexDataStructs/Datarefs/Functions/: Datarefs_Init.c  Datarefs_PublicFunctions.h
src/FsAccess/ComplexDataStructs/RefCon/DataStructDefs/: RefCon_Struct.h
src/FsAccess/DataStructDefs/: FsAccess_Struct.h
src/FsAccess/InternalData/: FsAccess_InternalData.c  FsAccess_InternalData.h
src/FsAccess/PrivateFunctions/: FsAccess_FlightLoopCallback.c  FsAccess_GetPluginRootDir.c  FsAccess_PrivateFunctions.h
src/FsAccess/PublicFunctions/: FsAccess_Deinit.c  FsAccess_Init.c  FsAccess_PublicFunctions.h
src/KospWindow/ConstantDefs/: KospWindow_ConstantDefs.h  KospWindow_GraphicsConstantDefs.h
src/KospWindow/DataStructDefs/: KospWindow_Page1Struct.h  KospWindow_Page2Struct.h  KospWindow_Page3Struct.h  KospWindow_Page4Struct.h  KospWindow_Struct.h
src/KospWindow/InternalData/: KospWindow_InternalData.c  KospWindow_InternalData.h
src/KospWindow/PrivateFunctions/: KospWIndow_CreateDrfs.c  KospWIndow_DeleteDrfs.c  KospWIndow_SetDrfs.c  KospWindow_CreateMenu.c  KospWindow_DestroyMenu.c  KospWindow_LoadConfJson.c  KospWindow_LoadJson.c  KospWindow_PrivateFunctions.h  KospWindow_SetSliderRatio.c  KospWindow_ToggleIsVisible.c  KospWindow_WriteConfJson.c
src/KospWindow/PrivateFunctions/Callbacks/: KospWindow_DrawCallback.c  KospWindow_MouseCallback.c  KospWindow_RenderCallback.c  KospWindow_ScrollWheelCallback.c
src/KospWindow/PublicFunctions/: KospWindow_Deinit.c  KospWindow_Init.c  KospWindow_PublicFunctions.h
src/KospWindow/PublicFunctions/Callbacks/: KospWIndow_FlightLoopCallback.c  KospWindow_FlightLoopCallback.c
src/SoundLogic/ComplexDataStructs/LandingGear/: LandingGear_Struct.h
src/SoundLogic/ConstantDefs/: SoundLogic_ConstantDefs.h
src/SoundLogic/DataStructDefs/: SoundLogic_Struct.h
src/SoundLogic/InternalData/: SoundLogic_InternalData.c  SoundLogic_InternalData.h
src/SoundLogic/PrivateFunctions/: SoundLogic_PrivateFunctions.h  SoundLogic_UpdateAirTimes.c  SoundLogic_UpdateFlapStress.c
src/SoundLogic/PublicFunctions/: SoundLogic_Deinit.c  SoundLogic_Init.c  SoundLogic_PublicFunctions.h
src/SoundLogic/PublicFunctions/Callbacks/: SoundLogic_FlightLoopCallback.c
src/Utils/: Utils_AnimUtils.h  Utils_MathUtils.h
